--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -10,7 +10,7 @@
     content: '';
     display: table;
     clear: both;
-  } 
+  }
 
   // sass-lint:disable
   *zoom: 1;
@@ -850,7 +850,7 @@ select {
   font-family: $accentFontStack;
   font-weight: $accentFontWeight;
   font-style: $accentFontStyle;
-  text-transform: uppercase;  
+  text-transform: uppercase;
   .strong, &.strong {
     font-weight: $accentFontWeightBold;
   }
@@ -961,7 +961,7 @@ h6 {
 .h4--accent,
 .h5--accent,
 .h6--accent{
-  @extend .accent;  
+  @extend .accent;
   margin: 0 0 0.75em;
   line-height: 1.4;
   a {
@@ -2774,7 +2774,7 @@ $infoBarPadding: 5px;
 .header-account-link{
   /*float: left;*/
   float:right;
-  
+
 }
 .header-message {
   line-height: $infoBarHeight;
@@ -2972,18 +2972,18 @@ ul.main-menu #menu-account-link {
     top:-4px;
     right:15px;
   }
-  
+
   .mobile-search-toggle img {
   	position:relative;
     left:15px;
   }
-  
+
   .header-hamburger img {
   }
-  
+
   .header-cart img {
   }
-  
+
   #desktop-header-wishlist-wrapper {
     display:none;
   }
@@ -3004,7 +3004,7 @@ ul.main-menu #menu-account-link {
     top:0;
     right:0;
     width:100%;
-    
+
     input.search-bar {
       width:92%;
       border-bottom: solid 1px;
@@ -3021,7 +3021,7 @@ ul.main-menu #menu-account-link {
   .nav--desktop .header-search__wrapper,
   .nav--desktop .header-account-link {
     display:none;
-  }  
+  }
   .mobile-search-toggle {
     position:absolute;
     top:50%;
@@ -3030,12 +3030,12 @@ ul.main-menu #menu-account-link {
   }
   .mobile-search-toggle > img {
     width:auto;
-    height:26px;    
+    height:26px;
   }
   .mobile-search__wrapper {
     top:0;
     left:0;
-    width:100%;    
+    width:100%;
     height:20vh;
     background-color:rgba(250,250,250,1);
     position:fixed;
@@ -3044,11 +3044,11 @@ ul.main-menu #menu-account-link {
     -webkit-transition:-webkit-transform .4s ease-out 0s;
     transition:-webkit-transform .4s ease-out 0s;
     transition:transform .4s ease-out 0s;
-    transition:transform .4s ease-out 0s,-webkit-transform .4s ease-out 0s;    
+    transition:transform .4s ease-out 0s,-webkit-transform .4s ease-out 0s;
   }
   .mobile-search__wrapper.open {
 	-webkit-transform:translateY(0);
-    transform:translateY(0);    
+    transform:translateY(0);
     z-index:200000000;
   }
   .mobile-search__header {
@@ -3062,7 +3062,7 @@ ul.main-menu #menu-account-link {
     -webkit-box-align:center;
     -ms-flex-align:center;
     align-items:center;
-    margin-right:15px;    
+    margin-right:15px;
     margin-left:15px;
   }
   .mobile-search__wrapper input {
@@ -3076,21 +3076,21 @@ ul.main-menu #menu-account-link {
   .mobile-search__wrapper input {
 	-webkit-box-flex:1;
     -ms-flex-positive:1;
-    flex-grow:1;    
+    flex-grow:1;
   }
   .mobile-search__wrapper .btn-search {
 	width:40%;
     text-transform:uppercase;
   }
-  .mobile-search__wrapper .search-btn {	
+  .mobile-search__wrapper .search-btn {
     height:26px;
     width:auto;
     background-size:contain;
     background-position:left center;
-  }  
+  }
   .mobile-search__wrapper .btn-close {
     border-radius:3px;
-    cursor:pointer;    
+    cursor:pointer;
     padding:10px 15px;
     border:none;
     float:right;
@@ -3111,7 +3111,7 @@ ul.main-menu #menu-account-link {
   }
   .mobile--only {
     display: none !important;
-  }  
+  }
   .info-bar .header-search__wrapper,
   .info-bar .header-account-link {
     display:block;
@@ -3124,11 +3124,11 @@ ul.main-menu #menu-account-link {
   .nav--desktop .header-search__wrapper,
   .nav--desktop .header-account-link {
     display:none;
-  }    
+  }
   .nav--mobile .header-search__wrapper,
   .nav--mobile .header-account-link {
     display:none;
-  }  
+  }
   .mobile-search-toggle,
   .mobile-search__wrapper {
     display:none;
@@ -3188,7 +3188,7 @@ ul.main-menu #menu-account-link {
     left: 19px;
     width: 20px;
     height: 20px;
-    border-radius: 12px;    
+    border-radius: 12px;
     background-color: $colorSplash;
     color: $colorSplashOpposite;
     display:flex;
@@ -3542,7 +3542,7 @@ header.site-header .logo--centered-wrapper {
     display: none;
   /*================ Only show on larger screens ================*/
   @include at-query ($min, $large) {
-    display: flex;    	
+    display: flex;
     text-align: center;
     align-content: center;
     justify-content: center;
@@ -4040,8 +4040,8 @@ $colorGiftBorder: $colorPrimary;
     left:-10px;
   }
 }
-  
-  
+
+
 /*================ Small height ================*/
 @media screen and (max-height: 800px) {
   .header-logo img {
@@ -5415,9 +5415,9 @@ Collection grid section
   margin: 0 0 11px 0;
 }
 
-.footer__title{  
-  font-size: .9rem;  
-  letter-spacing: 2.1px;  
+.footer__title{
+  font-size: .9rem;
+  letter-spacing: 2.1px;
   font-weight: 700;
 }
 
@@ -5558,13 +5558,13 @@ a .price_wrapper{
   width: 50%;
   max-width: 545px;
   margin: 0px auto;
-  
+
   @media only screen and (max-width: 750px) {
-   	width: 50%; 
+   	width: 50%;
   }
-  
+
   @media only screen and (max-width: 480px) {
-   	width: 100%; 
+   	width: 100%;
   }
 }
 
@@ -5791,7 +5791,7 @@ label.quatity-selector{
 @include at-query ($max, $medium) {
   .collection__sort select{
     font-size: 16px !important;
-    text-transform: none;    
+    text-transform: none;
   }
   .collection__sort label{
     display: none;
@@ -6109,47 +6109,47 @@ label.quatity-selector{
 }
 
 li.cbb-frequently-bought-product:first-of-type div.cbb-frequently-bought-product-image {
-  margin-left: 0px !important; 
+  margin-left: 0px !important;
 }
 
 @media only screen and (max-width: 1200px) {
-  
+
   .cbb-frequently-bought-selector-list input {
   	height: 20px !important;
     width: 20px !important;
     margin-right: 5px !important;
   }
-  
+
   .cbb-frequently-bought-selector-list input:checked::before {
-    top: -2px; 
+    top: -2px;
     left: 3px;
   }
-  
+
   .cbb-frequently-bought-container {
-     padding: 0px 30px; 
+     padding: 0px 30px;
   }
-  
+
   .cbb-frequently-bought-products {
-     margin: 0px 0px 0px 0px !important; 
+     margin: 0px 0px 0px 0px !important;
   }
-  
+
 }
 
 @media only screen and (max-width: 615px) {
   .cbb-frequently-bought-container {
-     padding: 0px 0px; 
+     padding: 0px 0px;
   }
-  
+
   .cbb-frequently-bought-products .cbb-frequently-bought-product {
     width: auto;
   }
-  
+
   .cbb-frequently-bought-product-image {
-   	margin: 0px !important; 
+   	margin: 0px !important;
   }
-  
+
   .cbb-frequently-bought-selector-list input:checked::before {
-   	top: -4px; 
+   	top: -4px;
   }
 }
 
@@ -6233,7 +6233,7 @@ p.size-guide-link a:hover {
 }
 
 /*.cbb-frequently-bought-container {
- border-top: 1px solid #f7f7f7; 
+ border-top: 1px solid #f7f7f7;
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-end;
@@ -6248,20 +6248,20 @@ p.size-guide-link a:hover {
 }
 
 .cbb-frequently-bought-selector-list {
- width: 100%; 
+ width: 100%;
 }
 
 .cbb-frequently-bought-products {
- width: 100%; 
+ width: 100%;
 }
 
 .cbb-frequently-bought-selector-label-name span {
- text-transform: lowercase; 
+ text-transform: lowercase;
 }
 
 @media only screen and (max-width: 770px) {
   .cbb-frequently-bought-container {
-    width: 100% !important; 
+    width: 100% !important;
   }
 }*/
 
@@ -6758,7 +6758,7 @@ html.no-js{
 
 /*================ Discounts ================*/
 
-.item__price p{  
+.item__price p{
   font-size:1em;
 }
 .item__price--sale{
@@ -7469,13 +7469,13 @@ $slick-opacity-not-active: 0.75 !default;
     width: 100%;
     li {
       position: relative;
-      display: inline-block;      
+      display: inline-block;
       width: 40px;
       margin: 10px 5px;
       padding: 0;
       cursor: pointer;
     }
-  }  
+  }
 }
 .product__thumbs--square{
   .slick-dots {
@@ -7646,6 +7646,10 @@ html.iframe{
 .mfp-ajax-cur {
   cursor: progress; }
 
+.mfp-zoom-out-cur {
+  overflow: hidden;
+}
+
 .mfp-zoom-out-cur, .mfp-zoom-out-cur .mfp-image-holder .mfp-close {
   cursor: -moz-zoom-out;
   cursor: -webkit-zoom-out;
@@ -7733,9 +7737,9 @@ button::-moz-focus-inner {
   width: 44px;
   height: 44px;
   line-height: 44px;
-  position: absolute;
-  right: 0;
-  top: 0;
+  position: fixed;
+  right: 5px;
+  top: 5px;
   text-decoration: none;
   text-align: center;
   opacity: 0.65;
@@ -8070,10 +8074,10 @@ button.mfp-close {
 /*============ Add any custom styles below this line ==================*/
 header.site-header .logo--centered-wrapper > a {
   margin: auto 0px;
-  
+
   @include at-query ($max, $large + $small) {
-    
-  }  
+
+  }
 }
 .site-header.showDesktop .wrapper,
 .info-bar.showDesktop .wrapper {
@@ -8090,14 +8094,14 @@ header.site-header .logo--centered-wrapper > a {
   -moz-appearance: none;
   border-radius: $radius;
   background-color: $colorSplash;
-  color: $colorBtnPrimaryText;  
-  margin: auto 0px auto 10px;  
+  color: $colorBtnPrimaryText;
+  margin: auto 0px auto 10px;
   &:hover,
   &:active,
   &:focus,
   &.nav-focus{
    background-color: $colorSplash;
-  }   
+  }
 }
 .page-campaign {
   	.adjust-margin {
@@ -8105,9 +8109,9 @@ header.site-header .logo--centered-wrapper > a {
     }
   	.adjust-margin_x2 {
       	margin-top:20%;
-    }  
-  	img { 
-      transition: all .75s ease-in-out; 
+    }
+  	img {
+      transition: all .75s ease-in-out;
     }
   	img:hover {
       transform:scale(1.05);
@@ -8126,22 +8130,22 @@ header.site-header .logo--centered-wrapper > a {
 #shopify-section-custom-collection,
 #shopify-section-custom-collection-2 {
   .shop-grid-img {
-    transition: all 1.5s ease-in-out; 
+    transition: all 1.5s ease-in-out;
   }
   .qview-button{
-    transition: all .5s ease-in-out; 
+    transition: all .5s ease-in-out;
     line-height: 2em!important;
-  }  
+  }
   .qview-button-container:hover .qview-button {
 	opacity: 0.9;
     visibility: visible;
   }
   .qview-button-container:hover .qview-button,
-  .qview-button:hover, 
-  .qview-button:focus, 
+  .qview-button:hover,
+  .qview-button:focus,
   .qview-button:active {
-      
-  }    
+
+  }
   .qview-button-container:hover .shop-grid-img,
   .shop-grid-img:hover{
     transform:scale(1.15)!important;
@@ -8151,7 +8155,7 @@ header.site-header .logo--centered-wrapper > a {
   }
 
 }
-.collection .name_wrapper {  
+.collection .name_wrapper {
   letter-spacing:initial;
   line-height:initial;
 }
@@ -8160,27 +8164,27 @@ header.site-header .logo--centered-wrapper > a {
 }
 .product-section .product-page {
   padding-bottom: 0px;
-  
+
   .tagline {
     font-family: $body2FontStack;
     font-weight: $body2FontWeight;
-    font-style: $body2FontStyle;  
+    font-style: $body2FontStyle;
     font-size: $body2FontAdjust + em;
     padding-left: 3px;
   }
   .size-guide {
-   	select.single-option-selector-product {      
+   	select.single-option-selector-product {
       text-align: left;
-      text-align-last: inherit;     
+      text-align-last: inherit;
       @include at-query ($min, $large) {
         width: 50%;
       	max-width: 50%;
         margin: 0 20px 0 0;
-        display:inline-block;        
-      }      
-      
+        display:inline-block;
+      }
+
     }
-    p.size-guide-link {      
+    p.size-guide-link {
       text-align:center;
       @include at-query ($min, $large) {
         display:inline-block;
@@ -8191,14 +8195,14 @@ header.site-header .logo--centered-wrapper > a {
       height:0;
     }
   }
-  
+
   .product__form.custom .add-to-cart__wrapper,
   {
     @include at-query ($min, $large) {
     	margin-top: 0;
     }
   }
-  .product__form.custom .add-to-cart__wrapper button.addToCart {   
+  .product__form.custom .add-to-cart__wrapper button.addToCart {
     background-color: $colorHomeDark;
     color: $colorHomeLight;
     @include at-query ($min, $large) {
@@ -8212,7 +8216,7 @@ header.site-header .logo--centered-wrapper > a {
 .size-tabs {
   overflow: hidden;
   border-top: solid 1px $colorBorder;
-  border-bottom: solid 1px $colorBorder;  
+  border-bottom: solid 1px $colorBorder;
   margin-bottom: 1.5em;
 }
 .size-tabs button {
@@ -8231,22 +8235,22 @@ header.site-header .logo--centered-wrapper > a {
 .size-tabs button:hover,
 .size-tabs button:active,
 .size-tablinks.active{
-  border-bottom: solid 3px $colorHomeDark;  
+  border-bottom: solid 3px $colorHomeDark;
   opacity: 1.0;
 }
 .size-tabs-heading {
   @extend h4;
   text-transform:capitalize;
-  
+
 }
 .size-tabcontent {
   display: none;
   border: 0px solid transparent;
   border-top: none;
-  
+
   .size-tabcontent-heading {
     padding: 10px;
-    background-color: $colorHomeDark; 
+    background-color: $colorHomeDark;
     color: #fff;
   }
 
@@ -8255,29 +8259,29 @@ header.site-header .logo--centered-wrapper > a {
     padding: 2% 4%;
     margin: 0 1% 1% 0;
     border: solid 1px $colorBorder;
-    width: 90%; 
+    width: 90%;
     @include at-query ($min, $medium) {
     	width: 18%;
-    }    
+    }
     @include at-query ($max, $medium) {
     	width: 45%;
-    }      
-    
-    .size-tabcontent-title {      
+    }
+
+    .size-tabcontent-title {
       margin: 3%;
       text-transform: lowercase;
     }
-    .size-divider {      
+    .size-divider {
       display:block;
       color: transparent;
       width:33%;
       background-color: $colorHomeDark;
       height: 2px;
       margin: 10% 0;
-      
+
     }
     .size-tabcontent-item {
-      opacity: 1.0;        
+      opacity: 1.0;
       font-size: 0.9em;
       line-height: 2em;
       text-align: right;
@@ -8292,7 +8296,7 @@ header.site-header .logo--centered-wrapper > a {
       font-weight: normal;
     }
   }
-  
+
 }
 
 /* -- Start Pipeline override code for thumbnails positioned on the left -- */
@@ -8310,7 +8314,7 @@ $adjusted-full: $adjusted-width + px;
      .product__thumbs--notsquare{
           float: left;
           width: $thumb-full;
-     }  
+     }
      .product__thumbs--square{
           float: left;
           width: $thumb-full;
@@ -8320,7 +8324,7 @@ $adjusted-full: $adjusted-width + px;
           width: $thumb-full !important;
           height: auto !important;
           margin: 0px;
-     }  
+     }
      .product__thumbs--square .slick-dots li img,
      .product__thumbs--square .slick-dots li{
           width: $thumb-full !important;
@@ -8330,7 +8334,7 @@ $adjusted-full: $adjusted-width + px;
 
      .product__slides.product-single__photos{
           float: right;
-          width: calc(100% - #{$adjusted-full});       
+          width: calc(100% - #{$adjusted-full});
           margin-left: 10px;
      }
 
@@ -8352,8 +8356,8 @@ nav.breadcrumb span {
 }
 /* -- add border around variant select options -- */
 .selector-wrapper select,
-.product-form__variants { 
-  border: 1px solid #999999; 
+.product-form__variants {
+  border: 1px solid #999999;
 }
 .shopify-product-form {
   margin:initial;
@@ -8384,7 +8388,7 @@ nav.breadcrumb span {
 /* -- continue to shop -- */
 .cart__footer input.continue__button {
     padding: 22px 50px;
-    line-height: 0;    
+    line-height: 0;
     font-size: 1em;
 }
 /* -- capitalize -- */
@@ -8399,12 +8403,12 @@ input[type="text"], input[type="search"], input[type="password"], input[type="em
   color: $colorTextBody !important;
 }
 .product__add__drawer {
-  width:100%;  
+  width:100%;
 }
 .cart-drawer {
   padding: 10px 0px;
   opacity:0.9;
-  
+
   span.close {
     top:initial!important;
   }
@@ -8421,22 +8425,22 @@ form div[id^=webyze-product-colors],
 div[id^=webyze-product-colors]::before {
   display:none!important;
 }
-.grid__item_frame {  
-  overflow: hidden;  
+.grid__item_frame {
+  overflow: hidden;
 }
 /* product page fixes */
 #productInfo-product span.title.text-larger {
-  font-size: 2rem;  
+  font-size: 2rem;
 }
 #productInfo-product span.price {
   color:#000;
   font-family: $body2FontStack;
   font-size: 16px;
-  font-weight: 700;  
+  font-weight: 700;
 }
 
 /* my wishlist style */
-#swym-plugin #swym-anchor a, 
+#swym-plugin #swym-anchor a,
 #swym-hosted-plugin #swym-anchor a {
   font-size: $baseFontSize;
   line-height: 1.6;
@@ -8456,7 +8460,7 @@ span.topbadge {
 #header-flex-wrapper span.topbadge {
   top: -30px;
   left: 2px;
-  
+
 }
 
 a#header-wishlist {
@@ -8465,7 +8469,7 @@ a#header-wishlist {
 
 /* video banner */
 .nobg {
-  background:none;  
+  background:none;
 }
 .video-autoplay-wrapper {
   display:flex;
@@ -8473,7 +8477,7 @@ a#header-wishlist {
 }
 .fade-in.campaign-grid-img {
   -webkit-animation: fadein 0.7s ease-in-out both 0.7s;
-  animation: fadein 0.7s ease-in-out both 0.7s;  
+  animation: fadein 0.7s ease-in-out both 0.7s;
 }
 
 /* shop page */
@@ -8492,7 +8496,7 @@ div.ev-shop-hero img {
   		margin:inherit;
 	}
   	.grid_item_wrapper {
-        display:flex;    
+        display:flex;
     }
   	.grid__item_frame {
       	height:100%;
@@ -8505,8 +8509,8 @@ div.ev-shop-hero img {
     }
 }
 
-/* 
-	EvenVision Custom Styles 
+/*
+	EvenVision Custom Styles
 */
 
 /* Uppercase Code */
@@ -8539,7 +8543,7 @@ h7,
 
 /* Fixing issues with webform popup */
 .privy-form-element-wrapper {
- z-index: 100 !important; 
+ z-index: 100 !important;
 }
 
 /*.privy-email-input:focus {
@@ -8553,21 +8557,21 @@ h7,
 
 /* Press Page Styling */
 #press-page {
-  
+
   .grid--full {
   	display: flex;
     flex-wrap: wrap;
   }
-  
+
   .main-content {
     padding-bottom: 0;
-    
+
   .press-page {
   font-weight: 500;
-    
+
   .collection {
     padding-bottom: 0;
-    
+
   .press_page_heading {
      display: flex;
      flex-direction: column;
@@ -8585,35 +8589,35 @@ h7,
       margin-top: -30px;
     }
   }
-   
+
   .grid {
 
   .grid__item {
 	padding: 0 15px 0 15px;
     margin-bottom: 60px;
-    
+
     @media only screen and (max-width: 850px) {
       width: 50%;
       margin-bottom: 50px;
     }
-    
+
     @media only screen and (max-width: 550px) {
       width: 100%;
       margin-bottom: 50px;
     }
-    
+
     a {
       text-decoration: none;
-      
+
       /*&:hover {
         text-decoration: underline;
       }*/
     }
-    
+
       .press-page-logo {
           height: 67px;
       }
-    
+
     .press-page-image {
       img {
         width: 100%;
@@ -8643,7 +8647,7 @@ h7,
         font-weight: bold;
         text-align: left;
         margin-top: 10px;
-        
+
         &:hover {
           color: #787878;
         }
@@ -8652,9 +8656,9 @@ h7,
    }
   }
  }
- }   
+ }
 }
-  
+
 /* Category Pages Styling */
 #shopify-section-collection .grid-uniform {
   display: flex;
@@ -8669,11 +8673,11 @@ h7,
 
 
 #shopify-section-collection .lazy-image {
- overflow: hidden; 
+ overflow: hidden;
 }
 
 #shopify-section-collection .push--large--one-sixth {
- left: unset; 
+ left: unset;
 }
 
 #shopify-section-collection .strong.h5--accent {
@@ -8696,7 +8700,7 @@ span {
 }
 
 .privy-element-wrapper span {
-	font-family: "lato" !important;  
+	font-family: "lato" !important;
 }
 
 .collection-shop-pager {
